--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             Experience the unlimited potential of ideas.</p>
                     </div>
                     <div class="white-part-section-2__button-wrapper">
-                        <a class="button white-part-section-2__button ">
+                        <a class="button white-part-section-2__button " tabindex="1">
                             <span class="button__span button__span_white"><span class="button__text">About
                                     us</span></span>
                         </a>
@@ -89,57 +89,60 @@
                 </div>
             </section>
             <section class="white-part-section-3">
-                <div class="white-part-section-3__inner inner">
-                    <div class="white-part-section-3__small-header-wrapper">
-                        <p class="text_500 text_grey  small-header">What we do</p>
-                    </div>
-                    <div class="white-part-section-3__header-wrapper">
-                        <h2 class="white-part-section-3__header text_purple">EPC+</h2>
-                    </div>
-                    <div class="white-part-section-3__text-wrapper">
-                        <p class="white-part-section-3__text text_balck ">By looking beyond engineering, procurement and
-                            construction, we take EPC to a
-                            new level. We call it EPC+.</p>
-                    </div>
-                    <div class="white-part-section-3__button-wrapper">
-                        <a class="button white-part-section-2__button ">
-                            <span class="button__span button__span_white"><span class="button__text">What we
-                                    do</span></span>
-                        </a>
-                    </div>
-                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_1">
-                        <article class="card">
-                            <img class="card__img" src="./images/Documents.png" alt="">
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                        </article>
-                    </div>
-                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_2">
-                        <article class="card">
-                            <img class="card__img" src="./images/Documents.png" alt="">
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                        </article>
-                    </div>
-                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_3">
-                        <article class="card">
+                <div class="cards-section">
+                    <div class="white-part-section-3__inner cards-section">
+                        <div class="white-part-section-3__small-header-wrapper">
+                            <p class="text_500 text_grey  small-header">What we do</p>
+                        </div>
+                        <div class="white-part-section-3__header-wrapper">
+                            <h2 class="white-part-section-3__header text_purple">EPC+</h2>
+                        </div>
+                        <div class="white-part-section-3__text-wrapper">
+                            <p class="white-part-section-3__text text_balck ">By looking beyond engineering, procurement
+                                and
+                                construction, we take EPC to a
+                                new level. We call it EPC+.</p>
+                        </div>
+                        <div class="white-part-section-3__button-wrapper">
+                            <a class="button white-part-section-2__button " tabindex="1">
+                                <span class="button__span button__span_white"><span class="button__text">What we
+                                        do</span></span>
+                            </a>
+                        </div>
+                        <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_1">
+                            <article class="card">
+                                <img class="card__img" src="./images/Documents.png" alt="">
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                            </article>
+                        </div>
+                        <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_2">
+                            <article class="card">
+                                <img class="card__img" src="./images/Documents.png" alt="">
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                            </article>
+                        </div>
+                        <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_3">
+                            <article class="card">
 
-                            <img class="card__img" src="./images/Documents.png" alt="">
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
+                                <img class="card__img" src="./images/Documents.png" alt="">
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
 
-                        </article>
-                    </div>
-                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_4">
-                        <article class="card">
-                            <img class="card__img" src="./images/Documents.png" alt="">
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                        </article>
+                            </article>
+                        </div>
+                        <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_4">
+                            <article class="card">
+                                <img class="card__img" src="./images/Documents.png" alt="">
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -209,114 +212,116 @@
                     </div>
                 </div>
             </section>
-            <section class="black-part-section2">
-                <div class="black-part-section-2__inner cards-section">
-                    <div class="black-part-section-2__small-header-wrapper">
-                        <p class="text_500 text_grey  small-header">Working at CC7 Europe</p>
-                    </div>
-                    <div class="white-part-section-3__header-wrapper">
-                        <h2 class="white-part-section-3__header text_purple">Empowering people</h2>
-                    </div>
-                    <div class="black-part-section-2__text-wrapper">
-                        <p class="black-part-section-2__text text_white ">We embrace a highly diverse and inclusive
-                            organisation. An inspiring
-                            workspace where talented</p>
-                    </div>
-                    <div class="black-part-section-2__button-wrapper">
-                        <a class="button black-part-section-2__button ">
-                            <span class="button__span button__span_black"><span class="button__text">What we
-                                    do</span></span>
-                        </a>
-                    </div>
-                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_1">
-                        <article class="card">
-                            <img class="card__img" src="./images/idea.png" alt="">
-                            <div>
-                                <h3 class="text_white">
-                                    Can't find job you're looking for? Apply here!
-                                </h3>
-                            </div>
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                            <div>
+            <section class="black-part-section2 ">
+                <div class="cards-section">
+                    <div class="black-part-section-2__inner ">
+                        <div class="black-part-section-2__small-header-wrapper">
+                            <p class="text_500 text_grey  small-header">Working at CC7 Europe</p>
+                        </div>
+                        <div class="white-part-section-3__header-wrapper">
+                            <h2 class="white-part-section-3__header text_purple">Empowering people</h2>
+                        </div>
+                        <div class="black-part-section-2__text-wrapper">
+                            <p class="black-part-section-2__text text_white ">We embrace a highly diverse and inclusive
+                                organisation. An inspiring
+                                workspace where talented</p>
+                        </div>
+                        <div class="black-part-section-2__button-wrapper">
+                            <a class="button black-part-section-2__button " tabindex="1">
+                                <span class="button__span button__span_black"><span class="button__text">What we
+                                        do</span></span>
+                            </a>
+                        </div>
+                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_1">
+                            <article class="card card1">
+                                <img class="card__img" src="" alt="">
+                                <div>
+                                    <h3 class="text_white">
+                                        Can't find job you're looking for? Apply here!
+                                    </h3>
+                                </div>
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                                <div>
 
-                                <p class="font_card text_white">
-                                    fulltime_fixed_term
-                                </p>
-                            </div>
-                            <div>
-                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_2">
-                        <article class="card">
-                            <img class="card__img" src="./images/idea.png" alt="">
-                            <div>
-                                <h3 class="text_white">
-                                    Can't find job you're looking for? Apply here!
-                                </h3>
-                            </div>
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                            <div>
+                                    <p class="font_card text_white">
+                                        fulltime_fixed_term
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_2">
+                            <article class="card card2">
+                                <img class="card__img" src="" alt="">
+                                <div>
+                                    <h3 class="text_white">
+                                        Can't find job you're looking for? Apply here!
+                                    </h3>
+                                </div>
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                                <div>
 
-                                <p class="font_card text_white">
-                                    fulltime_fixed_term
-                                </p>
-                            </div>
-                            <div>
-                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_3">
-                        <article class="card">
+                                    <p class="font_card text_white">
+                                        fulltime_fixed_term
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_3">
+                            <article class="card card3">
 
-                            <img class="card__img" src="./images/idea.png" alt="">
-                            <div>
-                                <h3 class="text_white">
-                                    Can't find job you're looking for? Apply here!
-                                </h3>
-                            </div>
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                            <div>
+                                <img class="card__img" src="" alt="">
+                                <div>
+                                    <h3 class="text_white">
+                                        Can't find job you're looking for? Apply here!
+                                    </h3>
+                                </div>
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                                <div>
 
-                                <p class="font_card text_white">
-                                    fulltime_fixed_term
-                                </p>
-                            </div>
-                            <div>
-                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
-                            </div>
+                                    <p class="font_card text_white">
+                                        fulltime_fixed_term
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                                </div>
 
-                        </article>
-                    </div>
-                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_4">
-                        <article class="card">
-                            <img class="card__img" src="./images/idea.png" alt="">
-                            <div>
-                                <h3 class="text_white">
-                                    Can't find job you're looking for? Apply here!
-                                </h3>
-                            </div>
-                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                and Detailed
-                                engineering</p>
-                            <div>
+                            </article>
+                        </div>
+                        <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_4">
+                            <article class="card card4">
+                                <img class="card__img" src="" alt="">
+                                <div>
+                                    <h3 class="text_white">
+                                        Can't find job you're looking for? Apply here!
+                                    </h3>
+                                </div>
+                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                    and Detailed
+                                    engineering</p>
+                                <div>
 
-                                <p class="font_card text_white">
-                                    fulltime_fixed_term
-                                </p>
-                            </div>
-                            <div>
-                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
-                            </div>
-                        </article>
+                                    <p class="font_card text_white">
+                                        fulltime_fixed_term
+                                    </p>
+                                </div>
+                                <div>
+                                    <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                                </div>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
