--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_1">
-                            <article class="card">
+                            <article class="card white-card1">
                                 <img class="card__img" src="./images/Documents.png" alt="">
                                 <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
                                     and Detailed
@@ -118,7 +118,7 @@
                             </article>
                         </div>
                         <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_2">
-                            <article class="card">
+                            <article class="card white-card2">
                                 <img class="card__img" src="./images/Documents.png" alt="">
                                 <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
                                     and Detailed
@@ -126,8 +126,7 @@
                             </article>
                         </div>
                         <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_3">
-                            <article class="card">
-
+                            <article class="card white-card3">
                                 <img class="card__img" src="./images/Documents.png" alt="">
                                 <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
                                     and Detailed
@@ -136,7 +135,7 @@
                             </article>
                         </div>
                         <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_4">
-                            <article class="card">
+                            <article class="card white-card4">
                                 <img class="card__img" src="./images/Documents.png" alt="">
                                 <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
                                     and Detailed
@@ -235,21 +234,22 @@
                         <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_1">
                             <article class="card card1">
                                 <img class="card__img" src="" alt="">
-                                <div>
+                                <div class="black-part-section-2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
                                 </div>
-                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                <p class="text_white card__text font_card ">
+                                    Feasibility
+                                    studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div>
-
+                                <div class="black-part-section-2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div>
+                                <div class="black-part-section-2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
@@ -257,67 +257,68 @@
                         <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_2">
                             <article class="card card2">
                                 <img class="card__img" src="" alt="">
-                                <div>
+                                <div class="black-part-section-2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
                                 </div>
-                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                <p class="text_white card__text font_card ">
+                                    Feasibility
+                                    studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div>
-
+                                <div class="black-part-section-2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div>
+                                <div class="black-part-section-2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
                         </div>
                         <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_3">
                             <article class="card card3">
-
                                 <img class="card__img" src="" alt="">
-                                <div>
+                                <div class="black-part-section-2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
                                 </div>
-                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                <p class="text_white card__text font_card ">
+                                    Feasibility
+                                    studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div>
-
+                                <div class="black-part-section-2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div>
+                                <div class="black-part-section-2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
-
                             </article>
                         </div>
                         <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_4">
                             <article class="card card4">
                                 <img class="card__img" src="" alt="">
-                                <div>
+                                <div class="black-part-section-2__card-h3">
                                     <h3 class="text_white">
                                         Can't find job you're looking for? Apply here!
                                     </h3>
                                 </div>
-                                <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                <p class="text_white card__text font_card ">
+                                    Feasibility
+                                    studies, Pre-feed and Feed
                                     and Detailed
                                     engineering</p>
-                                <div>
-
+                                <div class="black-part-section-2__card-first-subtext">
                                     <p class="font_card text_white">
                                         fulltime_fixed_term
                                     </p>
                                 </div>
-                                <div>
+                                <div class="black-part-section-2__card-p">
                                     <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
                                 </div>
                             </article>
